--- a/styles/style.css
+++ b/styles/style.css
@@ -42,18 +42,6 @@
     text-align: center;
 }
 
-.container {
-    width: 300px;
-    height: 200px;
-    background-color: #f7f7f7;
-    position: relative;
-}
-
-.absolute-box {
-    width: 100px;
-    height: 100px;
-    background-color: #007bff;
-    position: absolute;
-    top: 50px;
-    left: 50px;
+.box:hover {
+    background-color: #007bff
 }
